# Cursor-Cloud

./: .gitignore  README.md
.github/workflows/: test.yml
decisions/: 2026-06-18_product-decision.md
docs/: cloud-agent-handoff.md  cloud-agent-mission-v1.1.md  github-setup.md
marketing/: gumroad-listing.md  launch-guide.md
minutes/: 2026-06-18_cloud-agent-next.md  2026-06-18_kickoff.md
products/product-01/: LICENSE  QA-CHECKLIST.md  README.md  build-gui.ps1  build.ps1  package-release.ps1  pyproject.toml  requirements.txt
products/product-01/src/dedupcsv/: __init__.py  __main__.py  cli.py  core.py  gui.py
products/product-01/tests/: test_core.py  test_dry_run.py  test_edge_cases.py  test_gui.py
products/product-01/tests/fixtures/: sample.csv
research/: 2026-06-18_market-brief.md
